webapp/bug: floating glossary was hidden behind floating player.

--- a/webapp/src/styles.sass
+++ b/webapp/src/styles.sass
@@ -636,6 +636,7 @@ header
   padding: 1em
   position: absolute
   width: 30em
+  z-index: 10
 
   .term
     max-height: 99em
